# osu-cad

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .npmrc  CHANGELOG.md  Caddyfile  Dockerfile  README.md  capacitor.config.ts  deploy.sh  desktop.html  dev-compose.yml  dev.Dockerfile  docker-compose.yml  eslint.config.mjs  index.html  local.example.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.vite.json  vite.config.ts  vue.config.js
client/: package-lock.json  package.json  tsconfig.json  vue.config.js
common/: opcodes.ts  types.ts
docker/: Caddyfile  init.sql
gameserver/: .dockerignore  .gitignore  Cargo.toml  babel.config.json  build.rs  index.d.ts  package-lock.json  package.json  rollup.config.mjs  serialized.d.ts  tsconfig.json
gameserver/bindings/: ClientCommand.ts  ClientToServerMessage.ts  Difficulty.ts  HitObject.ts  HitObjectKind.ts  HitObjectOverrides.ts  IVec2.ts  Presence.ts  ServerCommand.ts  ServerState.ts  ServerTick.ts  ServerToClientMessage.ts  SliderControlPoint.ts  SliderControlPointKind.ts  TimingInformation.ts  TimingPoint.ts  UserInfo.ts  UserTick.ts  Vec2.ts
gameserver/src/: auth.ts  config.rs  healthcheck.ts  main.rs  main.ts  util.rs
gameserver/src/editor/: dispatcher.rs  handler.ts  index.ts  init.rs  matchmaking.ts  mod.rs  state.ts  test.ts
gameserver/src/editor/command/: general.ts  hitobject.override.ts  hitobject.rs  hitobject.ts  index.ts  messages.rs  mod.rs  timing.rs  timing.ts  user.rs
gameserver/src/editor/handlers/: hitobject.ts  match.ts  util.ts
gameserver/src/editor/state/: difficulty.rs  hitobject.rs  math.rs  mod.rs  timing.rs  user.rs
patches/: osu-classes@3.0.1.patch  osu-parsers+4.1.6.patch  osu-parsers@4.1.6.patch  osu-standard-stable@5.0.0.patch
wasm/: Cargo.toml
wasm/src/: geo.rs  lib.rs
(+373 files in other folders)
