[package]
name = "osucad-wasm"
version = "0.0.0"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
glam = "0.21.3"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_repr = "0.1"
prev-iter = "0.1.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Window',
    'Performance'
]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
